--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^4.2.1",
     "antd": "^4.5.1",
     "connected-react-router": "^6.8.0",
+    "firebase": "^8.10.0",
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^5.0.0",
     "jwt-decode": "^2.2.0",
@@ -14,6 +15,8 @@
     "react": "^16.13.1",
     "react-app-env": "^1.2.3",
     "react-dom": "^16.13.1",
+    "react-firebase-hooks": "^3.0.4",
+    "react-hook-form": "^7.14.2",
     "react-i18next": "^11.7.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.1",
@@ -26,7 +29,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "serve": "^10.1.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^7.0.1"
   },
   "scripts": {
     "start": "serve -s build",
