feat:Finall test

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-alice-carousel": "^2.5.1",
     "react-app-env": "^1.2.3",
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^3.0.4",
