--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "react-app-env --env-file=environments/.env.development start",
+    "build":"react-scripts build",
     "prod": "react-app-env --env-file=environments/.env.production start",
     "build:prod": "react-app-env --env-file=environments/.env.production build",
     "heroku-postbuild": "npm run build:prod",
